@@ -7,6 +7,9 @@ Changes in version 0.3 (Jul 2017)
 --------------------------------------
 - ByArtifactHtmlReportWriter: Add <meta http-equiv="Content-Type" content="text/html">; Make report title bigger
 - AbstractReportWriter: Create parent directories if necessary.
+- BuildScript: add getType(), getDescription() and getComponentId() methods to interface
+- DependencyParser: Add getApplicationName() to interface.
+- NeedyRunner: use new DependencyParserFactory.
 
 
 Changes in version 0.3 (Jul 2017)
